Getting structure in order

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-# Go dev tools (installed via go install)
-go-dev-tools/
+# This is a custom location for the executable binaries of Go dev tools
+# that will be installed with `go install` and a custom `GOBIN` path.
+.go-dev-tools/
