--- a/mise.toml
+++ b/mise.toml
@@ -2,5 +2,6 @@
 go = "1.25.7"
 
 [env]
-GOBIN = "{{cwd}}/go-dev-tools/bin"
-GOPLS_LSP_BIN = "{{cwd}}/go-dev-tools/bin/gopls"
+GOPATH = "{{cwd}}/.go-dev-tools"
+GOBIN = "{{cwd}}/.go-dev-tools/bin"
+GOPLS_LSP_BIN = "{{cwd}}/.go-dev-tools/bin/gopls"
